--- a/app/src/main/res/layout/activity_movie_list.xml
+++ b/app/src/main/res/layout/activity_movie_list.xml
@@ -16,7 +16,7 @@
         android:id="@+id/tv_error_message_display"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/activity_vertical_margin"
+        android:padding="@dimen/default_padding"
         android:text="@string/error_message"
         android:textSize="@dimen/error_text_size"
         android:visibility="invisible" />
