--- a/app/src/main/res/layout/video_list_item.xml
+++ b/app/src/main/res/layout/video_list_item.xml
@@ -9,14 +9,14 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/activity_vertical_margin">
+        android:padding="@dimen/default_padding">
 
         <ImageView
             android:id="@+id/iv_play_video"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_play_circle_filled_black_24dp"
-            android:paddingRight="@dimen/activity_vertical_margin"
+            android:paddingRight="@dimen/default_padding"
             android:tint="@color/colorYoutube"/>
 
         <TextView
