--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="default_padding">16dp</dimen>
     <dimen name="title_elevation">4dp</dimen>
     <dimen name="width_image_tile">180dp</dimen>
     <dimen name="progress_bar_size">42dp</dimen>
