--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -87,8 +87,9 @@
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/iv_movie_poster"
                     android:layout_below="@+id/tv_release_date"
-                    android:paddingLeft="@dimen/activity_horizontal_margin"
-                    android:text="Add to favorites"/>
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginTop="@dimen/default_padding"
+                    android:text="@string/add_to_favorites"/>
 
             </RelativeLayout>
 
